2001-12-11  Mike Kestner <mkestner@speakeasy.net>

	* codegen/get-structs-from-source.pl : New define-struct extractor.
	* codegen/gdk-structs.defs : generated defs with a few hand edits.

2001-12-04  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Index %structs by cname, not name. Derive
	  structs from class to facilitate marshalling since Value types can't
	  use the Marshal.PtrToStructure method. Generate StructLayout attr
	  for struct class defs. Stuff the signal args into a SignalArgs inst
	  to pass to the EventHandlers. 
	* sample/HelloWorld.cs : some cleanup and temporary signal playcode.

2001-12-01  Mike Kestner <mkestner@speakeasy.net>

	* makefile : Make ROOT /cygdrive/, not //.

2001-11-25  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl (get_sighandler): gen the helper class. arg
	  passing and return value handling need beefing up still.
	* glib/SignalArgs.cs : New arg passing/ return value handling class.
	* glib/SignalCallback.cs (dtor): kill, this will be gen'd in the 
	  subclasses. (ctor): prune down to two params.

2001-11-24  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : mkdir the glib/generated dir.
	(gen_signal): Call new get_sighandler sub. Doesn't use the returned
	  value yet.  s/event/ev3nt on arg names.
	(get_sighandler): new sub to lookup or gen a signal helper/delegate.
	  Only generates the delegate so far.
	* codegen/hardcoded.defs : Added a stub for Gdk.Event.
	* gdk/Event.cs : Killed, now a generated struct.
	* gdk/SimpleEvent.cs (SimpleEventCallback): Use Marshal.PtrToStructure
	  to create the Event, not a ctor(IntPtr).
	* glib/SignalCallback.cs : New abstract base class for signal helpers.

2001-11-14  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Add System.Collections to usings. 
	s/event/signal. Add gen_signal sub and call it from gen_object.
	Mangle method names that collide with signal names by prepending
	Emit to the method name.