@@ -35,7 +35,7 @@ while ($def = get_def()) {
 		$name = $1;
 		$def =~ /c-name "(\w+)"/;
 		$cname=$1;
-		$def =~ s/\n\s*//g;
+		$def =~ s/\r?\n\s*//g;
 		$structs{$cname} = $def;
 		$maptypes{$cname} = $name;
 		$marshaltypes{$cname} = $name;
@@ -43,19 +43,19 @@ while ($def = get_def()) {
 		$name = $1;
 		$def =~ /c-name "(\w+)"/;
 		$cname=$1;
-		$def =~ s/\n\s*//g;
+		$def =~ s/\r?\n\s*//g;
 		$objects{$cname} = $def;
 		$maptypes{$cname} = $name;
 		$marshaltypes{$cname} = "IntPtr";
 	} elsif ($def =~ /^\(define-(prop|signal|method)/) {
 		$def =~ /of-object "(\w+)"/;
 		$cname=$1;
-		$def =~ s/\n\s*//g;
+		$def =~ s/\r?\n\s*//g;
 		$objects{$cname} .= "\n$def";
 	} elsif ($def =~ /^\(define-function/) {
 		if ($def =~ /is-constructor-of (\w+)\)/) {
 			$cname=$1;
-			$def =~ s/\n\s*//g;
+			$def =~ s/\r?\n\s*//g;
 			$objects{$cname} .= "\n$def";
 		}
 	} elsif ($def =~ /^\(define-(interface)/) {
